--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 *.py --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 *.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 *.py --count --exit-zero --max-complexity=10 --statistics
     
     - name: Type Check with mypy
       run: |
